--- a/Project1/index.html
+++ b/Project1/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="js/script.js"></script>
+
 </head>
 <body>
     <p>Hello world!</p>
@@ -11,8 +13,6 @@
     <!--<script>
         alert(1);
     </script>-->
-    <script>
-        src="js/script.js"
-    </script>
+    
 </body>
 </html>
